--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -814,7 +814,6 @@ a
         margin-left 2%
 
 .searchresults .searchhitinfobar
-    color active_color
     margin-left 15px
     margin-top 0
 
