--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -506,7 +506,6 @@ form[name="delete_item"], form[name="rename_item"], form[name="destroy_item"]
     margin-left 2%
 
 .searchresults .searchhitinfobar
-    color nonexistent_link_color
     margin-left 15px
     margin-top 0
 
@@ -1235,7 +1234,7 @@ a.moin-nonexistent:hover
     margin 0
 
 #moin-search-query
-    width 80%
+    width 50%
 
 #moin-logo
     float left
